--- a/oblig2-tesla.ipynb
+++ b/oblig2-tesla.ipynb
@@ -1356,7 +1356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A function to predict the stock price\n",
+    "## A function to predict the Tesla stock price\n",
     "- As described in the assignment what follows is a function to predict Teslas stock market prices.\n",
     "- It only works on historical dates."
    ]
