Removed some comments

--- a/oblig2-tesla.ipynb
+++ b/oblig2-tesla.ipynb
@@ -1054,9 +1054,7 @@
    "metadata": {},
    "source": [
     "### Analyzing the metrics of the Linear Regression model\n",
-    "- The model is not precise at all!\n",
-    "- Something\n",
-    "- Something\n"
+    "- The model is not precise at all!"
    ]
   },
   {
@@ -1199,9 +1197,7 @@
    "source": [
     "### Analyzing the metrics of the Polynomial Regression model\n",
     "- It comes as no suprise that the Polynomial model is much more precise than the linear model.\n",
-    "- But there are still potential for improvement.\n",
-    "- Something\n",
-    "- Something"
+    "- But there are still potential for improvement."
    ]
   },
   {
@@ -1369,9 +1365,7 @@
    "source": [
     "### Analyzing the metrics of the Ridge Polynomial regression model\n",
     "- These metrics are much more precise than the previous models.\n",
-    "- There are still some potential for improvements, but I think this is good enough for this assignment.\n",
-    "- Something\n",
-    "- Something"
+    "- There are still some potential for improvements, but I think this is good enough for this assignment."
    ]
   },
   {
